# playground

./: README.md  playground.code-workspace
go/: .golangci.yml  go.mod
rs/: Cargo.toml  rust-toolchain.toml
rs/base64/cli/: Cargo.toml
rs/base64/cli/src/: config.rs  error.rs  main.rs
rs/base64/lib/: Cargo.toml
rs/base64/lib/src/: base64.rs  bytes.rs  lib.rs
rs/base64/lib/src/base64/: error.rs
rs/lal/cli/: Cargo.toml
rs/lal/cli/src/: config.rs  error.rs  main.rs
rs/lal/lib/: Cargo.toml
rs/lal/lib/src/: decodable.rs  encodable.rs  lib.rs
ts/: deno.jsonc
ts/_utils/: array.ts  file.ts  stdin.ts  typed-array.ts
ts/base62/: cli.ts  decode.test.ts
ts/base62/cli/: deno.jsonc  main.ts
ts/base62/lib/: _common.ts  base62.ts  decode.ts  deno.jsonc  encode.test.ts  encode.ts  mod.ts
ts/base64/: base64.ts  cli.ts
ts/base64/cli/: deno.jsonc  main.ts
ts/base64/decode/: algorithms.bench.ts  algorithms.test.ts
ts/base64/decode/algorithms/: atob.ts  num.ts  str.ts
ts/base64/encode/: algorithms.test.ts
ts/base64/encode/algorithms/: _common.ts  btoa.ts  num.ts  str.ts
ts/base64/lib/: base64.ts  deno.jsonc  mod.ts
ts/base64/lib/_data/: int.ts  posint.ts
ts/base64/lib/_utils/: array.ts  typed-array.ts
ts/base64/lib/decode/: algorithms.bench.ts  algorithms.test.ts
ts/base64/lib/encode/: algorithms.bench.ts  (+1 more)
ts/hello/: deno.jsonc
ts/lal/: cli.ts  decodable.test.ts  deno.jsonc  encodable.test.ts  encodable.ts
ts/lal/cli/: deno.jsonc  main.ts
ts/lal/lib/: decodable.test.ts  decodable.ts  deno.jsonc  encodable.test.ts  mod.ts
(+8 files in other folders)
